# Probably-Monopoly

./: .gitignore  CMakeLists.txt  README.md
src/: Board.cpp  Board.h  CircularList.cpp  CircularList.h  Dices.cpp  Dices.h  Player.cpp  Player.h  SimulationResult.h  cards.h  main.cpp  squareToName.cpp  squareToName.h  util.h
test/: CMakeLists.txt  CircularListTest.cpp  PlayerTest.cpp  test.cpp
